# pyrow

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  test.ipynb
notebooks/: boat_simulation.ipynb
src/pyrow/: config.py  load_dataset.py  physical_model.py  polar_diagram.py  polar_diagran.py  route_plot.py  route_simulation.py  shapes.py  spatial_operations.py  wheather_interpolation.py
